--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 	<noscript>You need to enable JavaScript to run this app.</noscript>
-	<div id="root"></div>
+	<div id="root" class="bg-app text-gray-200 flex flex-col min-h-screen"></div>
 	<div id="modals"></div>
 	<script src="/src/index.tsx" type="module"></script>
 </body>
